fix(OutboundConnector): add variables to fail JobCommand (#5988)
Extract variablesWithErrorMessage() helper to JobError record to pass
custom variables when failing jobs. This allows connector error handlers
to provide additional context variables that will be visible in Operate.

- Add variablesWithErrorMessage() method to JobError
- Add logging when user-provided 'error' key is overwritten
- Update SpringConnectorJobHandler and AiAgentJobWorkerHandlerImpl to use the new helper
- Add tests for variables functionality and error key collision behavior

FEEL engine type handling:
- Update test assertions to expect Long instead of Integer for numeric values
- The FEEL engine returns Long for all numeric types; this means workers may
  occasionally see Long values where Integer was previously expected
- This is not a breaking change: variables are sent to the engine as JSON,
  which doesn't distinguish between int and long, so the engine-side behavior
  remains identical

Closes #5979